Adding overall summary of counts of sync as well as not synced events

--- a/src/pages/data-entry/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry/data-entry-form/data-entry-form.html
@@ -34,10 +34,10 @@
             <br>
             <span *ngIf="!isLoading">
               <b>
-                <span [translate]="'synced'"></span>
+                <span [translate]="'Synced'"></span>
               </b> : {{ storageStatus.online }}
               <b>
-                <span [translate]="'not synced'"></span>
+                <span [translate]="'Not synced'"></span>
               </b> : {{storageStatus.offline }}</span>
           </div>
           <aggregate-conflict-handler (conflictFoundAction)="scrollEntryFormUp()" (mergeDataAction)="onMergingWithOnlineData($event)"
