--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -44,15 +44,14 @@
           <hr>
           <ion-row>
             <ion-col>
+              <div *ngIf="profileContent.id == 'userProfile'">
+                <profile-info [data]="userData[profileContent.id]" [currentUser]="currentUser"></profile-info>
+              </div>
+              <div *ngIf="profileContent.id == 'accountSetting'">
+                <profile-password [currentUser]="currentUser"></profile-password>
+              </div>
               <div *ngIf="userData && userData[profileContent.id]">
-                <div *ngIf="profileContent.id == 'userInfo'">
-                  <div *ngFor="let userInfo of userData[profileContent.id]; ">
-                    <div class="content">
-                      <b>{{ userInfo.key }}</b>
-                      <br>{{ userInfo.value }}</div>
-                  </div>
-                </div>
-                <div *ngIf="profileContent.id != 'userInfo'">
+                <div *ngIf="profileContent.id == 'orgUnits' || profileContent.id == 'program' || profileContent.id == 'form'">
                   <div *ngFor="let data of userData[profileContent.id];let currentIndex = index">
                     <div class="content">{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ data}}</div>
                   </div>
