--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -23,7 +23,7 @@
     </div>
 
     <div *ngIf="!isLoading">
-      <div class="item-card" *ngFor="let profileContent of profileContents">
+      <div class="item-card" *ngFor="let profileContent of profileContents;trackBy: trackByFn">
         <ion-row (tap)="toggleProfileContents(profileContent)">
           <ion-col col-11>
             <img class="side-menu-icon" [src]="profileContent.icon" />&nbsp;&nbsp;
@@ -45,8 +45,9 @@
           <ion-row>
             <ion-col>
               <div *ngIf="profileContent.id == 'userProfile'">
-                <profile-info [profileInfoForm]="profileInfoForm" [barcodeSettings]="barcodeSettings" [dataEntrySettings]="dataEntrySettings"
-                  [data]="userData[profileContent.id]" [currentUser]="currentUser"></profile-info>
+                <profile-info (onProfileInfoUpdate)="updateProfileInformation($event)" [profileInfoForm]="profileInfoForm" [dataValuesSavingStatusClass]="dataValuesSavingStatusClass"
+                  [barcodeSettings]="barcodeSettings" [dataEntrySettings]="dataEntrySettings" [data]="userData[profileContent.id]"
+                  [currentUser]="currentUser"></profile-info>
               </div>
               <div *ngIf="profileContent.id == 'accountSetting'">
                 <profile-password [currentUser]="currentUser"></profile-password>
