--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -50,7 +50,7 @@
                   [currentUser]="currentUser"></profile-info>
               </div>
               <div *ngIf="profileContent.id == 'accountSetting'">
-                <profile-password [currentUser]="currentUser"></profile-password>
+                <profile-password [barcodeSettings]="barcodeSettings" [dataEntrySettings]="dataEntrySettings" [currentUser]="currentUser"></profile-password>
               </div>
               <div *ngIf="userData && userData[profileContent.id]">
                 <div *ngIf="profileContent.id == 'orgUnits' || profileContent.id == 'program' || profileContent.id == 'form'">
