Enable and disable change pawword button as well as lable on if form is ready or on clike update password button

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -51,8 +51,8 @@
               </div>
               <div *ngIf="profileContent.id == 'accountSetting'">
                 <profile-password (onUpdateUserPassword)="updateUserPassword($event)" (onChangePasswordFormField)="passwordFormFieldUpdate($event)"
-                  [isPasswordFormValid]="isPasswordFormValid" [barcodeSettings]="barcodeSettings" [dataEntrySettings]="dataEntrySettings"
-                  [currentUser]="currentUser"></profile-password>
+                  [isPasswordFormValid]="isPasswordFormValid" [isUserPasswordUpdateProcessActive]="isUserPasswordUpdateProcessActive"
+                  [barcodeSettings]="barcodeSettings" [dataEntrySettings]="dataEntrySettings" [currentUser]="currentUser"></profile-password>
               </div>
               <div *ngIf="userData && userData[profileContent.id]">
                 <div *ngIf="profileContent.id == 'orgUnits' || profileContent.id == 'program' || profileContent.id == 'form'">
