--- a/src/pages/event-capture/event-capture-register/event-capture-register.html
+++ b/src/pages/event-capture/event-capture-register/event-capture-register.html
@@ -34,8 +34,9 @@
               <br>
             </div>
             <form>
-              <program-stage-event-based [formLayout]="formLayout" [programStage]="programStage" [emptyEvent]="emptyEvent" (onCancelEvent)="goBack()"
-                [dataDimension]="dataDimension" [currentEvent]="currentEvent" (onDeleteEvent)="onEventDeleted()"></program-stage-event-based>
+              <program-stage-event-based [programSkipLogicMetadata]="programSkipLogicMetadata" [formLayout]="formLayout" [programStage]="programStage"
+                [emptyEvent]="emptyEvent" (onCancelEvent)="goBack()" [dataDimension]="dataDimension" [currentEvent]="currentEvent"
+                (onDeleteEvent)="onEventDeleted()"></program-stage-event-based>
             </form>
           </ion-col>
         </ion-row>
