--- a/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -70,8 +70,8 @@
                     </b>
                     <hr>
                   </div>
-                  <tracker-registration-form [formLayout]="formLayout" [dataObject]="dataObject" [dataUpdateStatus]="dataUpdateStatus$ | async"
-                    [currentUser]="currentUser" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
+                  <tracker-registration-form [(hiddenSections)]="hiddenSections" [(hiddenFields)]="hiddenFields" [formLayout]="formLayout"
+                    [dataObject]="dataObject" [dataUpdateStatus]="dataUpdateStatus$ | async" [currentUser]="currentUser" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
                     [trackerRegistrationForm]="trackerRegistrationForm" [programTrackedEntityAttributes]="programTrackedEntityAttributes"
                     (onChange)="updateData($event,false)"></tracker-registration-form>
                   <div no-padding>
