--- a/src/pages/option-list-modal/option-list-modal.html
+++ b/src/pages/option-list-modal/option-list-modal.html
@@ -20,7 +20,8 @@
           <div class="animated fadeIn">
             <ion-list>
               <ion-item *ngFor="let option of arrayOfOptions[currentPage - 1];trackBy: trackByFn" (click)="selectOption(option)">
-                <span ion-text [color]="(currentValue && currentValue == option.code) ?'current' : 'font-color'">{{ option.name }}</span>
+                <span ion-text [color]="(currentValue && currentValue == option.code) ?'current' : 'font-color'">{{
+                  option.name }}</span>
               </ion-item>
             </ion-list>
           </div>
@@ -33,19 +34,20 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <button ion-button outline [disabled]="(currentPage == 1)" color="font-color" text-capitalize (click)="previousPage()">
+        <button ion-button padding outline [disabled]="(currentPage == 1)" color="font-color" text-capitalize (click)="previousPage()">
           <ion-icon name="skip-backward"></ion-icon>
         </button>
-        <button ion-button clear color="font-color" text-capitalize>
+        <button ion-button padding clear color="font-color" text-capitalize>
           {{ (arrayOfOptions.length > 0)? currentPage : 0 }}/{{ arrayOfOptions.length }}
         </button>
-        <button ion-button outline [disabled]="!(currentPage < arrayOfOptions.length)" color="font-color" text-capitalize (click)="nextPage()">
+        <button ion-button padding outline [disabled]="!(currentPage < arrayOfOptions.length)" color="font-color"
+          text-capitalize (click)="nextPage()">
           <ion-icon name="skip-forward"></ion-icon>
         </button>
       </ion-col>
       <ion-col col-auto>
         <div float-right>
-          <button ion-button outline color="danger" text-capitalize (click)="clearValue()">
+          <button ion-button padding outline color="danger" text-capitalize (click)="clearValue()">
             <ion-icon name='trash'></ion-icon>
           </button>
         </div>
