--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -45,9 +45,9 @@
           <ion-row>
             <ion-col>
               <div *ngIf="profileContent.id == 'userProfile'">
-                <profile-info (onProfileInfoUpdate)="updateProfileInformation($event)" [profileInfoForm]="profileInfoForm" [dataValuesSavingStatusClass]="dataValuesSavingStatusClass"
-                  [barcodeSettings]="barcodeSettings" [dataEntrySettings]="dataEntrySettings" [data]="userData[profileContent.id]"
-                  [currentUser]="currentUser"></profile-info>
+                <profile-info (onProfileInfoUpdate)="updateProfileInformation($event)" [profileInfoForm]="profileInfoForm"
+                  [dataValuesSavingStatusClass]="dataValuesSavingStatusClass" [barcodeSettings]="barcodeSettings"
+                  [dataEntrySettings]="dataEntrySettings" [data]="userData[profileContent.id]" [currentUser]="currentUser"></profile-info>
               </div>
               <div *ngIf="profileContent.id == 'accountSetting'">
                 <profile-password (onUpdateUserPassword)="updateUserPassword($event)" (onChangePasswordFormField)="passwordFormFieldUpdate($event)"
@@ -55,7 +55,7 @@
                   [barcodeSettings]="barcodeSettings" [dataEntrySettings]="dataEntrySettings" [currentUser]="currentUser"></profile-password>
               </div>
               <div *ngIf="userData && userData[profileContent.id]">
-                <div *ngIf="profileContent.id == 'orgUnits' || profileContent.id == 'program' || profileContent.id == 'form'">
+                <div *ngIf="profileContent.id == 'orgUnits' ||profileContent.id == 'roles' || profileContent.id == 'program' || profileContent.id == 'form'">
                   <div *ngFor="let data of userData[profileContent.id];let currentIndex = index">
                     <div class="content">{{ currentIndex + 1 }}&nbsp;.&nbsp;{{ data}}</div>
                   </div>
